# rust_tcp

./: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/src/net/: manager.rs
client/src/ui/: app.rs  clipboard.rs  mod.rs  window.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
src/net/: component.rs  config.rs  connection.rs  dispatch.rs  error.rs  frame.rs  listener.rs  manager.rs  message.rs  mod.rs  run.bat  socket.rs
src/net/internal/: config.rs  connection.rs  dispatch.rs  error.rs  event.rs  listener.rs  mod.rs  parser.rs  socket.rs
tcp/: Cargo.toml
tcp/src/: lib.rs
tcp/src/component/: builder.rs  component.rs  creator.rs  default_component.rs  mod.rs
tcp/src/dispatcher/: dispatcher.rs
tcp/src/error/: error.rs
tcp/src/framer/: framer.rs  mod.rs
tcp/src/listener/: builder.rs  creator.rs  default_listener.rs  listener.rs  mod.rs
tcp/src/message/: message.rs
tcp/src/socket/: builder.rs  connection.rs  creator.rs  default_socket.rs  mod.rs  socket.rs
