[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["蓦然<71164325@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = { version = "1" }
tcp = { path = "../tcp" }