[package]
name = "tcp"
version = "0.1.0"
edition = "2021"
authors = ["蓦然<71164325@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.68" }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1" }

[features]
nightly = []
sync_unsafe_cell = []